--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,7 +6,8 @@ body{
     background-color: gray;
 }
 .btn-animals{
-    background-color: cornflowerblue
+    background-color: cornflowerblue;
+    
 }
 img{
     margin:10px;
@@ -14,5 +15,15 @@ img{
     max-width: 250px;
     align-self: auto;
     border-style: solid;
+    border-color: whitesmoke;
+}
+#animalForm{
+    float: right;
+}
+hr{
+    height: 10px;
+}
+#showHere{
+    background:black;
     border-color: whitesmoke;
 }
